modules/gdscript/tests/scripts/runtime/errors/callable_call_after_free_object.debugonly.gd
#debug-only
func test():
	var node := Node.new()
	var inside_tree = node.is_inside_tree
	node.free()
	inside_tree.call()
